@@ -25,6 +25,8 @@ Module::Build->new(
 	},
 	requires => {
 		"Carp" => 0,
+		"Date::ISO8601" => 0,
+		"Date::JD" => "0.005",
 		"DateTime::TimeZone::SystemV" => "0.002",
 		"IO::File" => "1.13",
 		"IO::Handle" => "1.08",
