@@ -1,7 +1,3 @@
-* pass zone name through to DT:TZ:SystemV (requiring new version)
-
-* include the local time and zone name in error message about non-existent local time (matching DT:TZ:SystemV)
-
 * better criterion for zone disuse error message
 
 * check interoperability with DateTime's {utc,local}_rd_values around leap seconds
