@@ -1,3 +1,6 @@
+  * include the time and zone name in error messages about non-existent
+    local time and unrepresented time
+
   * check argument types in constructor
 
   * make test suite work even if DateTime is not available
